Se modifican las excepciones para cada proyecto y se las cambian en cada clase, en webApi se modifica el codigo principal del proyecto para que funcione la documentacion API, además se cambias los returns de cada metodo de los controller, verificar si estan bien el miercoles

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -30,4 +30,9 @@
     <ProjectReference Include="..\LogicaNegocio\LogicaNegocio.csproj" />
   </ItemGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+	
 </Project>
